tests/should_fail/syntax_missing_closing_brace.nv
module main

// SHOULD FAIL: missing closing brace on function body
fn broken() -> Int {
    return 42

println(broken())
